fix(challenge page): fixed the white space before the footer

--- a/sass/challenge.scss
+++ b/sass/challenge.scss
@@ -82,7 +82,7 @@ $color-footer: #1B1B1B;
     &__form {
         margin-top: 3rem;
         margin-left: 10rem;
-        margin-bottom: 6rem;
+        margin-bottom: -2rem;
         position: relative;
 
         &--text {
@@ -147,7 +147,7 @@ $color-footer: #1B1B1B;
 
 .footer {
     position: relative;
-    bottom: -51rem;
+    bottom: -5rem;
     margin: 0 !important;
     background-color: $color-footer;
     display: flex;
